--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,6 +3,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "paths": { "@angular/*": [ "../node_modules/@angular/*" ] },
     "outDir": "./out-tsc/app",
     "types": []
   },
@@ -11,5 +12,5 @@
   ],
   "include": [
     "src/**/*.d.ts"
-  ]
+  ],
 }
